<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_last_update"
        style="@style/ContentTextStyle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/last_update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_update_date"
        style="@style/ContentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/dummy_update_date"
        app:layout_constraintLeft_toRightOf="@id/tv_last_update"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_indonesia"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_last_update"
        card_view:cardBackgroundColor="@color/country_color"
        card_view:cardCornerRadius="8dp"
        card_view:layout_constraintRight_toLeftOf="@id/cv_positive">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_indonesia"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/dummy_country_name"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/dp_5"
                android:src="@drawable/id" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_positive"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tv_last_update"
        card_view:cardBackgroundColor="@color/positive_color"
        card_view:cardCornerRadius="8dp"
        card_view:layout_constraintLeft_toRightOf="@id/cv_indonesia"
        card_view:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_positive"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/positive"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_total_positive"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/dummy_total_positive"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_40" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_recovered"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        card_view:cardBackgroundColor="@color/recovered_color"
        card_view:cardCornerRadius="8dp"
        card_view:layout_constraintRight_toLeftOf="@id/cv_death"
        card_view:layout_constraintTop_toBottomOf="@id/cv_positive">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recovered"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/recovered"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_total_recovered"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/dummy_total_recovered"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_40" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_death"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp_10"
        card_view:cardBackgroundColor="@color/death_color"
        card_view:cardCornerRadius="8dp"
        card_view:layout_constraintLeft_toRightOf="@id/cv_recovered"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/cv_positive">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_death"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/death"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_total_death"
                style="@style/ContentTextStyle.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/dummy_total_death"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_40" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_news"
        style="@style/ContentTextStyle.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/news"
        android:textSize="@dimen/sp_26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_death" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_news"
        tools:listitem="@layout/item_news" />

    <TextView
        android:id="@+id/tv_indonesia_data"
        style="@style/ContentTextStyle.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/global_data"
        android:textSize="@dimen/sp_26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_news" />

    <TextView
        android:id="@+id/tv_see_all_global"
        style="@style/ContentTextStyle.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/see_all"
        android:textColor="@color/dark_sky_blue"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toTopOf="@id/rv_country_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_news" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_country_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_30"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_indonesia_data"
        tools:listitem="@layout/item_country_data" />

</androidx.constraintlayout.widget.ConstraintLayout>