<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_5"
    android:layout_marginLeft="@dimen/dp_5"
    android:layout_marginRight="@dimen/dp_5"
    android:layout_marginBottom="@dimen/dp_10">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_province_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_province_name"
                style="@style/ContentTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_margin="@dimen/dp_20"
                android:text="@string/dummy_province_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_expand_province"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_20"
                android:src="@drawable/ic_down_arrow"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_positive"
                style="@style/ContentTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive"
                app:layout_constraintRight_toLeftOf="@id/tv_total_positive_province"
                app:layout_constraintTop_toTopOf="@id/tv_province_name" />

            <TextView
                android:id="@+id/tv_total_positive_province"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/dummy_total_positive"
                android:textAlignment="textEnd"
                app:layout_constraintRight_toLeftOf="@id/iv_expand_province"
                app:layout_constraintTop_toTopOf="@id/tv_province_name" />


            <RelativeLayout
                android:id="@+id/el_detail_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/iv_expand_province"
                app:layout_constraintTop_toBottomOf="@id/tv_total_positive_province">

                <LinearLayout
                    android:id="@+id/ll_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_recovered"
                        style="@style/ContentTextStyle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="@string/recovered" />

                    <TextView
                        android:id="@+id/tv_total_recovered_province"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_total_recovered"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_death"
                        style="@style/ContentTextStyle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:gravity="center_horizontal"
                        android:text="@string/death" />

                    <TextView
                        android:id="@+id/tv_total_death_province"
                        android:layout_width="60dp"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="1234566" />

                </LinearLayout>


            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
